* Fix up various TODO's
CMakeConfig.txt: add optional bits for perl, gnuplot, pstopnm, pnmscale,
  pnmtopng.

LintelFind.cmake: improve documentation, directly use ${variable}_PATH
  for checking if LINTEL_FIND_PROGRAM found the program.

AssertBoost.hpp: drop AssertLevel, mark AssertBoostFnAfter as deprecated,
  AssertBoostFail as noreturn.  Make format arg const so we can pass an empty
  format.  Add try blocks around the fatal error and invariant format
  parsing so that if it fails, we still generate an error message.
  Drop DEBUG_CHECK, goes away with the AssertLevel removal.  

CompilerMarkup.hpp: Fix up the markup so that it should work for
  windows.

AssertBoost.cpp: const format argument

src/BatchParallel/CMakeLists.txt: only install modules if perl was
  enabled.

src/CMakeLists.txt: conditionalize perl modules and further 
  conditionalize the mercury bits.  Add perl to the lintel features,
  only config/install the perl programs if perl is enabled and
  mercury if lots of stuff was enabled.

batch-parallel.in: remove code that was pending removal after
  2008-06-01

deptool.in: Allof for additional arguments to be specified for cmake
  when used with deptool.  

lintel-flock.in: switchover to WITH_PROGRAM(perl) meant substitution
  changed.

mercury-plot.in: replace lots of calls to programs with the path that
  was found.

testutil.cpp: test that the assert try block functions correctly, and
  check a few more of the invariant/fatal_error variants.

--- a/src/BatchParallel/CMakeLists.txt
+++ b/src/BatchParallel/CMakeLists.txt
@@ -14,5 +14,7 @@ SET(BATCH_PARALLEL_FILES
 	tar.pm
 )
 
-INSTALL(FILES ${BATCH_PARALLEL_FILES}
-	DESTINATION ${CMAKE_INSTALL_PREFIX}/share/bp_modules/BatchParallel)
+IF(PERL_ENABLED)
+    INSTALL(FILES ${BATCH_PARALLEL_FILES}
+    	DESTINATION ${CMAKE_INSTALL_PREFIX}/share/bp_modules/BatchParallel)
+ENDIF(PERL_ENABLED)
