--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -79,14 +79,21 @@ ADD_SUBDIRECTORY(tests)
 
 ################################## PERL MODULES
 
-LINTEL_INSTALL_FILE_PATH(${CMAKE_INSTALL_PREFIX}/share/perl5
-	Text/Expand.pm
-	Text/ExpandInt.pm
-	Plot/Mercury.pm
-	Plot/Mercury/Tics.pm
-	Lintel/Net/SSH/KnownHostsFile.pm
-	Lintel/File/Lock.pm
-)
+IF(PERL_ENABLED)
+    LINTEL_INSTALL_FILE_PATH(${CMAKE_INSTALL_PREFIX}/share/perl5
+    	Text/Expand.pm
+    	Text/ExpandInt.pm
+    	Lintel/Net/SSH/KnownHostsFile.pm
+    	Lintel/File/Lock.pm
+    )
+ENDIF(PERL_ENABLED)
+
+IF(MERCURY_PLOT_ENABLED)
+    LINTEL_INSTALL_FILE_PATH(${CMAKE_INSTALL_PREFIX}/share/perl5
+    	Plot/Mercury.pm
+    	Plot/Mercury/Tics.pm
+    )
+ENDIF(MERCURY_PLOT_ENABLED)
 
 ################################## CONDITIONAL BITS
 
@@ -114,6 +121,10 @@ IF(BOOST_PROGRAM_OPTIONS_ENABLED)
     LIST(APPEND LINTEL_FEATURES program-options)
     LIST(APPEND LIBLINTEL_SOURCES ProgramOptions.cpp)
 ENDIF(BOOST_PROGRAM_OPTIONS_ENABLED)
+
+IF(PERL_ENABLED)
+    LIST(APPEND LINTEL_FEATURES perl)
+ENDIF(PERL_ENABLED)
 
 ################################## LIBRARY
 
@@ -147,12 +158,19 @@ INSTALL(TARGETS Lintel DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
 IF(${CMAKE_SYSTEM_NAME} STREQUAL "CYGWIN")
   INSTALL(TARGETS Lintel DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
 ENDIF(${CMAKE_SYSTEM_NAME} STREQUAL "CYGWIN")
-LINTEL_INSTALL_CONFIG_PROGRAM(batch-parallel)
-LINTEL_INSTALL_CONFIG_PROGRAM(deptool)
 LINTEL_INSTALL_CONFIG_PROGRAM(lintel-config)
 LINTEL_INSTALL_CONFIG_PROGRAM(lintel-acinclude)
-LINTEL_INSTALL_CONFIG_PROGRAM(lintel-flock)
-LINTEL_INSTALL_CONFIG_PROGRAM(mercury-plot)
+
+IF(PERL_ENABLED) 
+    LINTEL_INSTALL_CONFIG_PROGRAM(batch-parallel)
+    LINTEL_INSTALL_CONFIG_PROGRAM(deptool)
+    LINTEL_INSTALL_CONFIG_PROGRAM(lintel-flock)
+ENDIF(PERL_ENABLED) 
+
+IF(MERCURY_PLOT_ENABLED)
+    LINTEL_INSTALL_CONFIG_PROGRAM(mercury-plot)
+ENDIF(MERCURY_PLOT_ENABLED)
+
 LINTEL_INSTALL_CONFIG_FILE(redhat-rules 
 	${CMAKE_INSTALL_PREFIX}/share/packaging)
 
