HashFns.hpp: [BUGFIX] should have been checking the size of   hashType(v); also works around bug in including boost/graphviz
deptool.in: [BUGFIX] default directory to '' so we avoid warnings

hashfns.cpp: [BUGFIX] use fully qualified hash name (not really
  needed, but included when I was testing with inclusing
  boost/graphviz)

--- a/src/deptool.in
+++ b/src/deptool.in
@@ -1584,6 +1584,7 @@ sub makeDiffOrder {
     my %file_key;
     map { die "?? $_" unless m!^(.+/)?([^/]+?)(?:\.(\w+))?$!o;
           my ($dir, $name, $suffix) = ($1, $2, $3);
+	  $dir ||= '';
 	  $suffix ||= 'no-suffix';
           my $test_key = $dir =~ m!/tests\b!o ? 0 : 1;
           my $header_key = $suffix eq 'hpp' ? 0 : 1;
