--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -41,6 +41,8 @@ LINTEL_SIMPLE_TEST(priority_queue)
 
 ################################## SPECIAL TEST PROGRAMS
 
+INCLUDE(FindPerl)
+
 LINTEL_SIMPLE_PROGRAM(check-LintelAssert)
 ADD_TEST(lintel-assert ${CMAKE_CURRENT_SOURCE_DIR}/run-check-LintelAssert.sh ${CMAKE_CURRENT_SOURCE_DIR})
 
@@ -52,6 +54,7 @@ ADD_TEST(test_util ${CMAKE_CURRENT_SOURCE_DIR}/run-check-test-util.sh)
 
 # just make sure it can compile.
 ADD_TEST(deptool ${CMAKE_CURRENT_BINARY_DIR}/../deptool getenv for-sh)
+ADD_TEST(lintel_dbi ${PERL_EXECUTABLE} -I${CMAKE_INSTALL_PREFIX}/share/perl5 -e "use Lintel::DBI")
 
 ################################## CONDITIONAL BITS
 
